<?xml version="1.0" encoding="utf-8"?>

<!-- <com.db.williamchart.view.DonutChartView
     android:id="@+id/memory_chart"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:outlineAmbientShadowColor="@color/primaryColor"
     android:outlineSpotShadowColor="@color/primaryDarkColor"
     app:chart_donutBackgroundColor="@color/primaryColor"
     app:chart_donutRoundCorners="true"
     app:chart_donutThickness="16dp"
     app:chart_donutTotal="10.1"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/external_memory"
            android:layout_width="353dp"
            android:layout_height="279dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="117dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="117dp"
                android:text="@string/memory"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/memory_chart"
                android:layout_width="320dp"

                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </com.github.mikephil.charting.charts.PieChart>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/external2_memory"
            android:layout_width="353dp"
            android:layout_height="279dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/external_memory">

            <TextView
                android:id="@+id/tvDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="117dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="117dp"
                android:text="@string/sd_card"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/memory_chart2"
                android:layout_width="320dp"

                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </com.github.mikephil.charting.charts.PieChart>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ram"
            android:layout_width="353dp"
            android:layout_height="279dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/external2_memory">

            <TextView
                android:id="@+id/tvDesc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="117dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="117dp"
                android:text="@string/ram"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/ram_chart"
                android:layout_width="320dp"

                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </com.github.mikephil.charting.charts.PieChart>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>